# efr3

./: .gitignore
backend/auth/: .air.toml  Dockerfile  Dockerfile.dev  docker-compose.yml  go.mod  go.sum  main.go
backend/auth/assets/js/: htmx.min.js  jsconfig.json
backend/auth/assets/js/components/: counter.js  my-element.js
backend/auth/templates/: index.templ  index_templ.go
backend/cam-server/: Dockerfile  Dockerfile.dev  ExpiringMap.ts  api_test.ts  cam_manager.ts  db.ts  deno.jsonc  http_server.ts  socket_map.ts  types.ts  utils.ts
backend/dev/certs/: fr.crt  intermediate.crt  root.crt
backend/dev/config/: Caddyfile  paravision.env  rtsp-webrtc.json  safr.env
backend/facade/: Dockerfile  Dockerfile.dev
backend/facade/site/: index.html
backend/rtsp-webrtc/: Dockerfile  README.md
backend/safr-core/: AGENTS.md  Cargo.toml  MODERNIZATION_PLAN.md  c_run.sh  rustfmt.toml
backend/safr-core/cv-cli/: Cargo.toml
backend/safr-core/cv-cli/src/: main.rs
backend/safr-core/db/schema/live/: README.md  SCHEMA_SOURCE.md  identity_schema_full.sql  identity_schema_owned.sql  refresh_identity_schema.sh
backend/safr-core/examples/: README.md  _common  add-face  delete-face  delete-faces  detect-faces  enrollment-create-min  enrollment-delete-frid  enrollment-errlog  enrollment-metadata  enrollment-reset  enrollment-roster  enrollment-search-lastname  get-identity  mark-attendance  quality-check  recognize  remote_search  send-alert  token  tpass_load  tpass_search.sh  validate-image  vibe-check
backend/safr-core/fr-api/: .dockerignore  API_CONTRACT.md  Cargo.toml  Dockerfile  Dockerfile.dev  README.md
backend/safr-core/fr-api/src/: attendance_handlers.rs  config.rs  enrollment_handlers.rs  errors.rs  extractors.rs  fr_service.rs  macros.rs  main.rs  profile_handlers.rs  recognition_handlers.rs  runtime.rs  tpass_handlers.rs  types.rs  v1_handlers.rs
backend/safr-core/fr-api/src/handlers/: attendance_handlers.rs  mod.rs  profile_handlers.rs  tpass_handlers.rs
backend/safr-core/fr-api/src/macros/: env.rs  json.rs  mod.rs  utils.rs
backend/safr-core/libfr/: Cargo.toml
backend/safr-core/libfr/src/: errors.rs  lib.rs
backend/safr-core/libfr/src/backend/: mod.rs  paravision.rs  paravision_grpc.rs  pvtypes.rs
backend/safr-core/libfr/src/remote/: mod.rs  tpass.rs
backend/safr-core/libfr/src/repo/: mod.rs  sqlx.rs  types.rs
backend/safr-core/libfr/src/v2/: domain.rs  mod.rs
backend/safr-core/libfr/src/v2/adapters/: fr_repo_sqlx.rs  mod.rs
backend/safr-core/libfr/tests/: repo_fr_repo_live.rs  v2_fr_repo_live.rs
backend/safr-core/libpv/: Cargo.toml  build.rs
backend/safr-core/libpv/proto/identity/: identity_service.proto  models.proto
backend/safr-core/libpv/proto/proc/: health_service.proto  processor.proto  processor_service.proto
backend/safr-core/libpv/src/: errors.rs  grpc_utils.rs  identity_grpc.rs  identity_mapper.rs  lib.rs  proc_grpc.rs  proc_mapper.rs  types.rs
backend/safr-core/libpv/tests/: identity_grpc_live.rs  proc_grpc_live.rs
backend/safr-core/libtpass/: Cargo.toml
backend/safr-core/libtpass/src/: api.rs  config.rs  errors.rs  lib.rs  tokens.rs  types.rs  types_v1.rs
frontend/cam-app/: Dockerfile.dev  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  vite.config.ts
frontend/cam-app/src/: app.css
frontend/cam-app/src/lib/: app_store.ts  auth_store.ts  fralert_store.ts  shared  sortable.ts  utils.ts  websocketclient.ts
frontend/cam-app/src/lib/components/: CamGridView.svelte  CamSettings.svelte  Camera.svelte  Clock.svelte  DeleteDlg.svelte  FRAlertDlg.svelte  FaceCard.svelte  FacelistItem.svelte  Nav.svelte  Notification.svelte  Notifications.svelte  SingleCamView.svelte  WatchlistCard.svelte  WatchlistItem.svelte
frontend/cam-app/src/lib/components/icons/: ArrowPathIcon.svelte  SuccessIcon.svelte
frontend/cam-app/src/routes/: +layout.svelte
frontend/cam-app/src/routes/(app)/: +layout.svelte  +page.svelte
frontend/cam-app/src/routes/(app)/scratch/: +page.svelte
frontend/cam-app/src/routes/(app)/single-cam/: +page.svelte
frontend/cam-app/src/routes/(auth)/login/: +page.svelte
frontend/fr-analyze/: Dockerfile  package-lock.json  package.json  svelte.config.js  tailwind.config.cjs  tsconfig.json
frontend/fr-analyze/src/: app.css
frontend/fr-analyze/src/lib/: auth_store.ts  profile_store.ts  remote_api.ts  store.ts  types.ts  utils.ts  video_store.ts
frontend/fr-analyze/src/lib/components/: FaceCard.svelte  FrIdentities.svelte  FrIdentity.svelte  ImageCropper.svelte  LineupList.svelte  Nav.svelte  SelectBox.svelte  UnknownFaceCard.svelte  WatchlistCard.svelte
frontend/fr-analyze/src/lib/components/dialog/: CreateProfileForm.svelte  ProfileDialog.svelte
frontend/fr-analyze/src/routes/: +layout.ts
frontend/fr-analyze/src/routes/(app)/: +layout.svelte  +page.svelte
frontend/fr-analyze/src/routes/(app)/image_analyzer/: +page.svelte
frontend/fr-analyze/src/routes/(app)/settings/: +page.svelte
frontend/fr-analyze/src/routes/(auth)/login/: +page.svelte
scripts/: manage-dev.sh  run-dev.bk  run-dev.sh
shared/: types.ts
