[package]
name = "cv-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
bytes = { version = "1", features = ["serde"] }
base64 = "0.22.1"
serde = { version ="1.0.228", features=["derive"]}
serde_json = "1.0.149"
#sqlx = { version ="0.6", features=["runtime-tokio-native-tls","postgres", "uuid", "chrono", "macros","json", "time"]}
csv = "1.4.0"
indicatif = "0.17.11"
futures = { version = "0.3" }
tokio = { version="1", features=["full"] }
tokio-util = "0.7.18"
tracing = "0.1"
tracing-subscriber = { version ="0.3", features=["env-filter"]}
#log = "0.4"
#env_logger = "0.9"
reqwest = { version = "0.13.2", features = ["stream", "json", "multipart", "form", "query"] }
#serde_urlencoded = "0.7.1"
thiserror = "1.0.69"
anyhow = "1.0.100"
clap = { version = "4.5", features= ["derive"] }
