[package]
name = "fr-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libfr = {path = "../libfr"}
libtpass = {path = "../libtpass"}

rand = "0.8.5"
axum = { version = "0.8.8", features = ["multipart"] }
#axum-server = { version = "0.8", features = ["tls-rustls"] }
axum-server = { version = "0.8.0" }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6.8", features = ["fs", "trace","cors"] }
# hyper

bytes = { version = "1", features = ["serde"] }
base64 = "0.22.1"
serde = { version ="1.0.228", features=["derive"]}
serde_json = "1.0.149"
serde_with = "2.3.3"
#sqlx = { version ="0.6", features=["runtime-tokio-native-tls","postgres", "uuid", "chrono", "macros","json", "time"]}
sqlx = { version = "0.8.6", features=["runtime-tokio","postgres", "uuid", "chrono", "macros","json", "time"]}
tokio = { version="1", features=["full"] }
tracing = "0.1"
tracing-subscriber = { version ="0.3", features=["env-filter"]}
log = "0.4"
env_logger = "0.9.3"
reqwest = { version = "0.13.2", features = ["json", "multipart", "form", "query"] }
serde_urlencoded = "0.7.1"
thiserror = "1.0.69"
dotenvy = "0.15.7"
