[package]
name = "libfr"
version = "0.1.0"
edition = "2021"

[features]
default = []
sqlx-typecheck = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { version = "1", features = ["serde"] }
chrono = { version="0.4", features=["serde"] }
libpv = {path= "../libpv"}
libtpass = {path= "../libtpass"}
prost-types = "0.13"
sqlx = { version ="0.8.6", features=["runtime-tokio","postgres","sqlite", "uuid", "chrono", "macros","json", "time"]}
reqwest = { version = "0.13.2", features = ["json", "multipart", "form", "query"] }
serde = { version ="1.0", features=["derive"]}
serde_json = "1.0.149"
tokio = { version="1", features=["full"] }
tracing = "0.1"
thiserror = "1.0.69"
