[package]
name = "libpv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version="0.4", features=["serde"]}
serde = { version ="1.0", features=["derive"]}
serde_json = "1.0.149"
#lazy_static = "1.4.0"
tokio = {version="1", features= ["full"]}
# regex = "1"
bytes = { version="1", features=["serde"]}
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"
prost-types = "0.13"
#sqlx = { version ="0.6", features=["runtime-tokio-native-tls","postgres", "uuid", "chrono", "macros","json", "time"]}
tracing = "0.1"
thiserror = "1.0.69"
# tracing-subscriber = { version ="0.3", features=["env-filter"]}

[build-dependencies]
tonic-build = "0.12"
protoc-bin-vendored = "3"
