[package]
name = "libtpass"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version="0.4", features=["serde"]}
serde = { version ="1.0", features=["derive"]}
serde_json = "1.0.149"
lazy_static = "1.5.0"
rayon = "1.11.0"
tokio = {version="1", features= ["full"]}

futures = { version = "0.3" }
regex = "1"
reqwest = { version ="0.13.2", features=["json", "form", "query"]}
bytes = { version="1", features=["serde"]}
base64 = "0.22.1"
#sqlx = { version ="0.6", features=["runtime-tokio-native-tls","postgres", "uuid", "chrono", "macros","json", "time"]}
tracing = "0.1"
tracing-subscriber = { version ="0.3", features=["env-filter"]}
jsonwebtoken = "10.3.0"
thiserror = "1.0.69"
